Version 2.1.133
    A fix for an 'array out of bounds' error related to players clicking outside the inventory windows has been fixed
    French locale has been updated (thanks Elikill58)
    Another fix has been deployed to prevent mobs from having hearts in player death messages (thanks FrankHeijden)
    Players no longer ready their tool if they don't have access to the skill (thanks Draycia)

Version 2.1.132
    A fix is in place to prevent an exploit from working that is due to a yet to be patched Spigot server software bug
    Fixed a NPE that could happen when players swapped items from their hotbar

    NOTE: The exploit was not described on purpose, please update.
    I reported the bug to Spigot, so hopefully it will be patched in the near future.

Version 2.1.131

    New permission node 'mcmmo.ability.repair.netheriterepair' which is included in the mcmmo.defaults permission package
    New permission node 'mcmmo.ability.salvage.netheritesalvage' which is included in the mcmmo.defaults permission package
    Changed Salvage maximum quantity values to 4 for all Netherite armor
    mcMMO will set the default salvage quantities for netherite armor to 4 once and then never again (see notes)

    Added Basalt to Bonus Drops for Mining in config.yml (see notes)
    Added Polished Basalt to Bonus Drops for Mining in config.yml (see notes)
    Added Blackstone to Bonus Drops for Mining in config.yml (see notes)
    Added Chain to Bonus Drops for Mining in config.yml (see notes)
    Added Nether Bricks to Bonus Drops for Mining in config.yml (see notes)
    Added Red Nether Bricks to Bonus Drops for Mining in config.yml (see notes)
    Added Cracked Nether Bricks to Bonus Drops for Mining in config.yml (see notes)
    Added Chiseled Nether Bricks to Bonus Drops for Mining in config.yml (see notes)
    Added Crying Obsidian to Bonus Drops for Mining in config.yml (see notes)
    Added Gilded Blackstone to Bonus Drops for Mining in config.yml (see notes)